--- a/index.html
+++ b/index.html
@@ -1,12 +1,70 @@
 <!DOCTYPE html>
 <html lang="en">
-<meta charset="UTF-8">
-<title>Page Title</title>
-<meta name="viewport" content="width=device-width,initial-scale=1">
-<link rel="stylesheet" href="">
-<style>
-</style>
-<script src=""></script>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Privacy Policy - AudioNote2Text</title>
+</head>
 <body>
-<p><strong>Политика конфиденциальности. </strong></p><p>Настоящий документ &laquo;Политика конфиденциальности&raquo; (далее по тексту &ndash; &laquo;Политика&raquo;) представляет собой правила использования данных интернет-пользователей (далее &laquo;вы&raquo; и/или &laquo;Пользователь&raquo;), собираемых с использованием приложения "Медицинская карта ребёнка".</p><p>1. Обрабатываемые данные</p><p>1.1. <strong>Мы не осуществляем сбор ваших персональных данных с использованием приложения "Медицинская карта ребёнка".</strong></p><p>1.2. Все данные пользователя (в том числе фотографии) хранятся только в телефоне пользователя.</p><p>1.3. Данные пользователя не сохраняются в базах данных и облаках.</p><p>1.4. Вы осознаете и принимаете возможность утери информации, которые Вы загружаете в приложение.&nbsp;</p><p>1.5. Администрация не несет ответственность за порядок использования данных Пользователя третьими лицами.</p><p>Редакция от 22.05.2021 г.</p></body>
+    <header>
+        <h1>Privacy Policy</h1>
+        <p><strong>Effective Date:</strong> 22.11.2024</p>
+    </header>
+    <main>
+        <section>
+            <h2>Welcome to AudioNote2Text!</h2>
+            <p>Your privacy is important to us, and we are committed to protecting your personal data. This Privacy Policy outlines how we handle your information when you use our app.</p>
+        </section>
+        <section>
+            <h2>1. Data Collection</h2>
+            <p>We do not collect, store, or transmit your data to external servers. All data, including audio recordings, text notes, and any other content you create within the app, is stored <strong>exclusively on your device</strong>.</p>
+        </section>
+        <section>
+            <h2>2. Data Usage</h2>
+            <ul>
+                <li><strong>Audio Notes:</strong> Audio recordings made using the app are converted to text using on-device speech recognition technology.</li>
+                <li><strong>Journals and Entries:</strong> Your diaries and notes remain on your device unless you choose to share or export them.</li>
+                <li><strong>Printing and Sharing:</strong> If you choose to print or share your notes, the app will only process the information required for that action, but it does not store or transmit your data to external systems.</li>
+            </ul>
+        </section>
+        <section>
+            <h2>3. Data Security</h2>
+            <p>We prioritize your data’s security by ensuring:</p>
+            <ul>
+                <li>All your information is stored locally on your device.</li>
+                <li>No information is transmitted to third-party servers.</li>
+                <li>You have full control over your data, including deletion or export of your notes.</li>
+            </ul>
+        </section>
+        <section>
+            <h2>4. Permissions</h2>
+            <p>To provide the app’s features, we may request the following permissions:</p>
+            <ul>
+                <li><strong>Microphone:</strong> To record audio for transcription.</li>
+                <li><strong>Storage:</strong> To save and retrieve your notes and recordings.</li>
+            </ul>
+            <p>These permissions are used solely to enhance your experience and are not used for any other purposes.</p>
+        </section>
+        <section>
+            <h2>5. Third-Party Access</h2>
+            <p>AudioNote2Text does not share your data with third parties. Your notes and recordings are private and remain within your control.</p>
+        </section>
+        <section>
+            <h2>6. User Responsibility</h2>
+            <p>As a user, you are responsible for securing your device and managing access to your data. We recommend using device-level security, such as passcodes or biometric authentication, to protect your information.</p>
+        </section>
+        <section>
+            <h2>7. Changes to the Privacy Policy</h2>
+            <p>We may update this Privacy Policy from time to time. Any changes will be communicated through app updates or notifications. Please review the policy periodically to stay informed about how your data is protected.</p>
+        </section>
+        <section>
+            <h2>8. Contact Us</h2>
+            <p>If you have any questions or concerns about this Privacy Policy or your data, please contact us at:</p>
+            <p><strong>Email:</strong> voice.app.n1@gmail.com</p>
+        </section>
+    </main>
+    <footer>
+        <p>By using AudioNote2Text, you agree to the terms of this Privacy Policy. Thank you for trusting us with your journaling needs!</p>
+    </footer>
+</body>
 </html>
